# stealth-scribe

./: .gitignore  AGENTS.md  main.py  manage.py  pyproject.toml
src/: config.py  diarizer.py  merger.py  recorder.py  transcriber.py
src/web_ui/: apps.py  audio.py  meetings.py  models.py  settings.py  urls.py  views.py
src/web_ui/migrations/: 0001_initial.py  0002_job.py  0003_job_language.py
src/web_ui/templates/: base.html  index.html  meeting_detail.html
src/web_ui/templates/partials/: action_buttons.html  job_status.html  speaker_edit_form.html  speaker_row.html
