[project]
name = "stealth-scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-ninja>=1.6.2",
    "httpx>=0.28.1",
    "onnxruntime==1.24.4",
    "python-dotenv>=1.2.2",
    "sherpa-onnx>=1.13.2",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
